--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import url('https://fonts.googleapis.com/css2?family=Goldman&family=Kdam+Thmor+Pro&family=Roboto:wght@100&display=swap');
+
+* {
+    font-family: 'Kdam Thmor Pro';
+}
